[package]
name = "load-runner"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = "0.14"
bevy_rapier2d = "0.27"
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", tag="v0.10.0"}
bevy-inspector-egui="0.25.0"
