[package]
name = "load-runner"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = "0.16"
bevy_rapier2d = "0.30"
bevy_ecs_ldtk = "0.12"
bevy-inspector-egui="0.31"
